--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,16 @@
 stay-signed-in=Stay Signed in
+
+title=Mouken
+title.login=Login - Mouken
+title.party=Party - Mouken
+title.sign-up=Sign Up - Mouken
+title.error=Error - Mouken
+title.dashboard=Dashboard- Mouken
+title.party.settings=Party Settings - Mouken
+title.notification=Notification - Mouken
+title.event=Event - Mouken
+title.profile=Profile - Mouken
+title.email-login=Email Login - Mouken
+title.check-email=Email Check - Mouken
+
+
