style: change profile settings tab

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -14,3 +14,8 @@ title.email-login=Email Login - Mouken
 title.check-email=Email Check - Mouken
 
 
+intro=Introduce
+party=Party
+setting=Setting
+
+
