--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -18,4 +18,16 @@ intro=Introduce
 party=Party
 settings=Settings
 
+description=Description
+banner=Banner
+tags=Tag
+zones=Zone
+profile=Profile
+password=Password
+notifications=Notification
+account=Account
+
+
+
+
 
