--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,6 +13,7 @@ title.profile=Profile - Mouken
 title.email-login=Email Login - Mouken
 title.check-email=Email Check - Mouken
 
+index.intro=Look for a team you want.
 
 intro=Introduce
 party=Party
@@ -34,3 +35,4 @@ new-party=New party
 new-party.desc=...
 new-event=New event
 new-event.desc=...
+
