--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -13,6 +13,7 @@ title.profile=프로필 - Mouken
 title.email-login=이메일 로그인 - Mouken
 title.check-email=이메일 확인 - Mouken
 
+index.intro=당신이 원하는 팀을 찾아보세요.
 
 intro=소개
 party=파티
