--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -9,6 +9,7 @@ title.dashboard=대쉬보드 - Mouken
 title.party.settings=세팅 - Mouken
 title.notification=알림 - Mouken
 title.event=이벤트 - Mouken
+title.post=글 작성하기 - Mouken 
 title.profile=프로필 - Mouken
 title.email-login=이메일 로그인 - Mouken
 title.check-email=이메일 확인 - Mouken
@@ -30,3 +31,9 @@ account=계정
 
 required=필수
 
+new-party=새로운 파티
+new-party.desc=...
+new-event=새로운 이벤트
+new-event.desc=...
+new-post=새로운 글
+parties=모든 파티
