--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,6 +9,7 @@ title.dashboard=Dashboard- Mouken
 title.party.settings=Party Settings - Mouken
 title.notification=Notification - Mouken
 title.event=Event - Mouken
+title.post=Posting - Mouken 
 title.profile=Profile - Mouken
 title.email-login=Email Login - Mouken
 title.check-email=Email Check - Mouken
@@ -30,9 +31,11 @@ account=Account
 
 required=Required.
 
-
-new-party=New party
+new-party=Create Party
 new-party.desc=...
-new-event=New event
+new-event=Create Event
 new-event.desc=...
+new-post=Create Post
+new-post.desc=...
+parties=All Parties
 
