--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -39,3 +39,21 @@ new-post=Create Post
 new-post.desc=...
 parties=All Parties
 
+
+name=Name
+name.role=Role name
+name.resource=Resource Name
+
+type=Type
+type.resource=Type
+
+# role
+admin=Admin
+manager=Manager
+user=User
+
+username=Username
+email=Email
+role=Role
+
+httpMethod=HTTP Method
