--- a/src/main/resources/messages_ko.properties
+++ b/src/main/resources/messages_ko.properties
@@ -37,3 +37,23 @@ new-event=새로운 이벤트
 new-event.desc=...
 new-post=새로운 글
 parties=모든 파티
+
+
+
+name=이름
+name.role=역할명
+name.resource=자원명
+
+type=유형
+type.resource=자원유형
+
+# role
+admin=관리자
+manager=매니저
+user=사용자
+
+username=아이디
+email=이메일
+role=역할
+
+httpMethod=HTTP 메서드
